# Byte_Geist

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
notes/: im_example.txt  manifest_files.txt
src/: interpreter.c
src/commands/: CMakeLists.txt  commands.c  commands.h  registers.c  registers.h
src/parser/: CMakeLists.txt  parser.c  parser.h  token.c  token.h
src/util/: CMakeLists.txt  file.c  file.h
test/: hello_world.im
