cmake_minimum_required(VERSION 3.5)
project(ByteGeist)

message(STATUS "CMake version: ${CMAKE_VERSION}")
message(STATUS "CMake system name: ${CMAKE_SYSTEM_NAME}")
message(STATUS "CMake system processor: ${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "CMake source directory: ${CMAKE_SOURCE_DIR}")

file(GLOB EXTERN_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} extern/*)
foreach(SOURCE ${EXTERN_SOURCES})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}/CMakeLists.txt)
        message(STATUS "Adding external directory: ${SOURCE}")
        add_subdirectory(${SOURCE})
    endif()
endforeach(SOURCE)

file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*)
foreach(DIR ${SUBDIRS})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${DIR} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${DIR}/CMakeLists.txt)
        message(STATUS "Adding subdirectory: ${DIR}")
        add_subdirectory(${DIR})
    endif()
endforeach(DIR)

add_executable(ByteGeist src/interpreter.c)
target_link_libraries(ByteGeist extern util commands parser)
